--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
             <h2 class="section-header">About</h2>
             <div class="interactive-card p-6 sm:p-8 rounded-2xl shadow-xl animated-card" style="animation-delay: 0.6s;">
                 <p class="text-lg text-text-light leading-relaxed" id="about-text">
-                    I am Amrat Kumar, an **aspiring IT professional** and a dedicated B.S. undergrad in **Information Technology (IT)** at **GC University, Hyderabad**. I am deeply passionate about both **software development and strategic thinking**, often finding parallels between coding complex systems and playing a game of Chess.
+                    I am Amrat Kumar, an aspiring IT professional and a dedicated B.S. undergrad in Information Technology (IT) at GC University, Hyderabad. I am deeply passionate about both software development and strategic thinking, often finding parallels between coding complex systems and playing a game of Chess.
                     <br><br>
-                    Currently, I'm strengthening my foundation in core languages like **C++, Java, and Python** and honing my skills in front-end technologies. I use **Git and GitHub** extensively to manage my projects and collaborate effectively. My goal is to continually learn and evolve, tackling new challenges and creating innovative solutions along the way.
+                    Currently, I'm strengthening my foundation in core languages like C++, Java, and Python and honing my skills in front-end technologies. I use Git and GitHub extensively to manage my projects and collaborate effectively. My goal is to continually learn and evolve, tackling new challenges and creating innovative solutions along the way.
                 </p>
             </div>
         </section>
@@ -269,7 +269,7 @@
                 <div class="interactive-card p-6 rounded-2xl shadow-lg text-center animated-card" style="animation-delay: 1.1s;">
                     <i data-lucide="code" class="w-10 h-10 skill-icon-primary mx-auto mb-3"></i>
                     <h3 class="text-xl font-bold text-text-light">Programming Languages</h3>
-                    <p class="text-text-muted mt-2">**C, C++, Java, Python**</p>
+                    <p class="text-text-muted mt-2"> C, C++, Java, Python </p>
                 </div>
 
                 <div class="interactive-card p-6 rounded-2xl shadow-lg text-center animated-card" style="animation-delay: 1.2s;">
@@ -420,4 +420,5 @@
     </script>
 </body>
 </html>
+
 
